# flow

./: pyproject.toml
src/: config.py  main.py  pyproject.toml
src/apps/applicant/: __init__.py  controllers.py  models.py
src/apps/applications/: models.py  routs.py
src/apps/core/: exceptions.py  response.py
src/apps/core/common/: fetcher.py  models.py  parser.py  request.py  schemas.py
src/apps/flow/: __init__.py  controllers.py  models.py  routs.py  schemas.py
src/migrations/models/: 0_20221125172009_init.py
