[tool.poetry]
name = "flow"
version = "0.1.0"
description = ""
authors = ["yotamvladgmail.com <yotamvlad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
tortoise-orm = "^0.19.2"
aerich = "^0.7.1"
aiohttp = "^3.8.3"
asyncpg = "^0.27.0"
uvicorn = "^0.20.0"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
